<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions_description">This is an Shoe Inventory application for your store. You can simply keep track of your shoes and add new one. You just need to add Shoe Name, Company, Shoe Size and Description. And when you want to check all your shoes again, the recently added shoe will be shown in the list</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="enter_login_email">Enter your e-mail address</string>
    <string name="password">Password</string>
    <string name="enter_login_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="welcome_text">Welcome to the app Shoe Store!</string>
    <string name="about_app">Here you can keep track of your shoes listed, add new shoes and check the description of each shoe. This project is developed during Udacity Android course using MVVM and Navigation components</string>
    <string name="go_to_instructions_btn">GO TO INSTRUCTIONS</string>
    <string name="how_to_use_this_app">How to use this app?</string>
    <string name="start_using_app">Start using app</string>
    <string name="add_new_shoe_fab">Add new shoe button</string>
    <string name="add_a_new_shoe_item_to_your_collection">Add a new shoe item to your collection</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="enter_shoe_manufacturer">Enter shoe manufacturer</string>
    <string name="enter_shoe_description">Enter shoe description</string>
    <string name="here_you_should_write_name_for_your_new_shoe_the_name_should_be_associated_with_the_official_model_name_of_the_shoe">Here you should write name for your new shoe. The name should be associated with the official model name of the shoe</string>
    <string name="here_you_should_enter_a_size_of_your_shoe_it_could_be_also_half_the_size_44_5_for_example">Here you should enter a size of your shoe, it could be also half the size(44.5 for example)</string>
    <string name="here_you_just_need_to_write_the_manufacturer_company_who_produced_your_shoes">Here you just need to write the manufacturer-company who produced your shoes</string>
    <string name="and_here_should_be_a_concise_description_what_are_the_shoues_designed_for">And here should be a concise description what are the shoues designed for</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name: %1$s</string>
    <string name="size">Size: %1$s</string>
    <string name="company">Company: %1$s</string>
    <string name="description">Description: %1$s</string>
</resources>
