<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="serif"
            android:text="@string/login"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_login_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="serif"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_login_password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/actionLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corners_view"
                android:padding="5dp"
                android:text="@string/login"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/actionRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corners_view"
                android:padding="5dp"
                android:text="@string/register"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</layout>