<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.WelcomeFragment"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"/>

    <TextView
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/navigateToInstructionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/round_corners_view"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/go_to_instructions_btn"
        android:textSize="16sp" />
</LinearLayout>
</layout>