<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:background="@drawable/gradient_background"
    tools:context=".ui.InstructionsFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        >
        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_to_use_this_app"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_description"
        android:textSize="20sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/instructions_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="32dp"
        android:background="@drawable/round_corners_view"
        android:text="@string/start_using_app"
        android:textSize="16sp" />
</LinearLayout>
</layout>