<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <import type="com.udacity.shoestore.domain.ShoeSizeConverterUseCase"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".ui.ShoeDetailFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75">

            <TextView
                android:id="@+id/header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/add_a_new_shoe_item_to_your_collection"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top">

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_name_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_bottom"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_top"
                app:layout_constraintVertical_bias="0.2">

                <EditText
                    android:inputType="textMultiLine"
                    android:id="@+id/shoe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_shoe_name"
                    android:textSize="20sp"
                    android:text="@={shoe.name}"
                    android:importantForAutofill="no" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_size_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <EditText
                    android:id="@+id/shoe_size"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_shoe_size"
                    android:textSize="20sp"
                    android:text="@={ShoeSizeConverterUseCase.doubleToString(shoe.size)}"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/edit_company_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <EditText
                    android:id="@+id/shoe_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_shoe_manufacturer"
                    android:textSize="20sp"
                    android:text="@={shoe.company}"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/edit_description_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <EditText
                    android:id="@+id/shoe_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_shoe_description"
                    android:textSize="20sp"
                    android:text="@={shoe.description}"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top">

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_name_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/shoe_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/here_you_should_write_name_for_your_new_shoe_the_name_should_be_associated_with_the_official_model_name_of_the_shoe"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_size_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/shoe_size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/here_you_should_enter_a_size_of_your_shoe_it_could_be_also_half_the_size_44_5_for_example"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_company_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/shoe_company_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/here_you_just_need_to_write_the_manufacturer_company_who_produced_your_shoes"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_description_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/shoe_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/and_here_should_be_a_concise_description_what_are_the_shoues_designed_for"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_bottom"
            android:background="@drawable/round_corners_view"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_view"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>